qbs (1.4.5+dfsg-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Use recommended https URIs for Vcs fields.
  * Bump Standards-Version to 3.9.7, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 17 Mar 2016 18:50:14 +0100

qbs (1.4.4+dfsg-1) unstable; urgency=medium

  * New upstream release.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 19 Dec 2015 13:46:01 +0300

qbs (1.4.3+dfsg-3) unstable; urgency=medium

  * Update debian/libqbscore1.symbols from buildds’ logs.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 04 Nov 2015 09:41:32 +0300

qbs (1.4.3+dfsg-2) unstable; urgency=medium

  * Do not try to run tests during arch-indep builds.
  * Split files in /usr/share into new qbs-common package.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 29 Oct 2015 11:22:24 +0300

qbs (1.4.3+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Drop dont_throw_exceptions.diff, applied upstream.
  * Refresh skip_test_homedirectory.diff.
  * Update debian/libqbscore1.symbols.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 28 Oct 2015 16:27:50 +0300

qbs (1.4.2+dfsg-3) unstable; urgency=medium

  * Use QBS_LIBRARY_DIRNAME to specify library dir (closes: #797774).

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 05 Sep 2015 10:24:02 +0300

qbs (1.4.2+dfsg-2) unstable; urgency=medium

  * Backport upstream change that should hopefully fix tests failures
    on most architectures (dont_throw_exceptions.diff).

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 26 Aug 2015 16:57:58 +0300

qbs (1.4.2+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Drop patches:
    - fix_assembly_test.diff (applied upstream)
    - revert_tests_speedup.diff (applied upstream)
    - skip_test.diff (no longer needed)
  * Refresh and rebase other patches.
  * Update qbs.install to install some new files.
  * Remove gitignore files in clean target.
  * Minor debian/copyright updates.
  * Update libqbscore1.symbols (only internal symbols changed).
